all demo class by teacher
